syntax = "proto3";

package book;

import "book-model.proto";

message Empty {}
message FindBookByIsbnRequest { string isbn = 1; }

service BookService {
  rpc FindBooks(Empty) returns (FindBooksResponse);
  rpc FindBookByIsbn(FindBookByIsbnRequest) returns (FindBookByIsbnResponse);
}
